Change arrows distance from margins in portfolio

--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -160,7 +160,7 @@
     margin: 0 auto;
     padding: 10px;
     width: 260px;
-    margin-top: 30px;
+    margin-top: 70px;
     font-size: 18px;
   }
   #portfolio .getproject button a {
@@ -176,7 +176,7 @@
     background: transparent;
     float: left;
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 15%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
     width: 44px;
@@ -187,7 +187,7 @@
     background: transparent;
     float: right;
     margin-top: 200px;
-    margin-right: 10%;
+    margin-right: 15%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
@@ -230,15 +230,19 @@
     border: none;
     border-radius: 25px;
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
-    margin-top: 20px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
   }
   #portfolio .getproject button:hover {
     transform: translate(-50%, -50%) scale(0.9);
@@ -249,7 +253,7 @@
     background: transparent;
     float: left;
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 20%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
     width: 44px;
@@ -260,7 +264,7 @@
     background: transparent;
     float: right;
     margin-top: 200px;
-    margin-right: 10%;
+    margin-right: 20%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
@@ -326,7 +330,7 @@
     background: transparent;
     float: left;
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 20%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
     width: 44px;
@@ -337,7 +341,7 @@
     background: transparent;
     float: right;
     margin-top: 200px;
-    margin-right: 10%;
+    margin-right: 20%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
@@ -403,7 +407,7 @@
     background: transparent;
     float: left;
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 25%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
     width: 44px;
@@ -414,7 +418,7 @@
     background: transparent;
     float: right;
     margin-top: 200px;
-    margin-right: 10%;
+    margin-right: 25%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
@@ -427,6 +431,314 @@
     margin: 0 auto;
     width: 320px;
     height: 210px;
+    max-width: 100%;
+    margin-top: 120px;
+  }
+  #portfolio .portfolio-text h2 {
+    text-align: center;
+    font-family: 'Rokkitt', serif;
+    margin-top: 200px;
+    font-size: 27px;
+  }
+  #portfolio .portfolio-text h2 b {
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  #portfolio .portfolio-text img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 172px;
+    height: auto;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 1599px) {
+  #portfolio .getproject button {
+    border: none;
+    border-radius: 25px;
+    background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
+  }
+  #portfolio .getproject button:hover {
+    transform: translate(-50%, -50%) scale(0.9);
+    animation: pulse 1s linear infinite;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow {
+    border: none;
+    background: transparent;
+    float: left;
+    margin-top: 200px;
+    margin-left: 25%;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow {
+    border: none;
+    background: transparent;
+    float: right;
+    margin-top: 200px;
+    margin-right: 25%;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .portfolio-item a img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 340px;
+    height: 220px;
+    max-width: 100%;
+    margin-top: 120px;
+  }
+  #portfolio .portfolio-text h2 {
+    text-align: center;
+    font-family: 'Rokkitt', serif;
+    margin-top: 200px;
+    font-size: 27px;
+  }
+  #portfolio .portfolio-text h2 b {
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  #portfolio .portfolio-text img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 172px;
+    height: auto;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 1600px) and (max-width: 1679px) {
+  #portfolio .getproject button {
+    border: none;
+    border-radius: 25px;
+    background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
+  }
+  #portfolio .getproject button:hover {
+    transform: translate(-50%, -50%) scale(0.9);
+    animation: pulse 1s linear infinite;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow {
+    border: none;
+    background: transparent;
+    float: left;
+    margin-top: 200px;
+    margin-left: 27%;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow {
+    border: none;
+    background: transparent;
+    float: right;
+    margin-top: 200px;
+    margin-right: 27%;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .portfolio-item a img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 340px;
+    height: 220px;
+    max-width: 100%;
+    margin-top: 120px;
+  }
+  #portfolio .portfolio-text h2 {
+    text-align: center;
+    font-family: 'Rokkitt', serif;
+    margin-top: 200px;
+    font-size: 27px;
+  }
+  #portfolio .portfolio-text h2 b {
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  #portfolio .portfolio-text img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 172px;
+    height: auto;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 1680px) and (max-width: 1919px) {
+  #portfolio .getproject button {
+    border: none;
+    border-radius: 25px;
+    background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
+  }
+  #portfolio .getproject button:hover {
+    transform: translate(-50%, -50%) scale(0.9);
+    animation: pulse 1s linear infinite;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow {
+    border: none;
+    background: transparent;
+    float: left;
+    margin-top: 200px;
+    margin-left: 29%;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow {
+    border: none;
+    background: transparent;
+    float: right;
+    margin-top: 200px;
+    margin-right: 29%;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .portfolio-item a img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 340px;
+    height: 220px;
+    max-width: 100%;
+    margin-top: 120px;
+  }
+  #portfolio .portfolio-text h2 {
+    text-align: center;
+    font-family: 'Rokkitt', serif;
+    margin-top: 200px;
+    font-size: 27px;
+  }
+  #portfolio .portfolio-text h2 b {
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  #portfolio .portfolio-text img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 172px;
+    height: auto;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 1920px) and (max-width: 2559px) {
+  #portfolio .getproject button {
+    border: none;
+    border-radius: 25px;
+    background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
+  }
+  #portfolio .getproject button a {
+    text-decoration: none;
+    color: #fff;
+  }
+  #portfolio .getproject button:hover {
+    transform: translate(-50%, -50%) scale(0.9);
+    animation: pulse 1s linear infinite;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow {
+    border: none;
+    background: transparent;
+    float: left;
+    margin-top: 200px;
+    margin-left: 31%;
+  }
+  #portfolio .next_and_back_slide_show button.left-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow {
+    border: none;
+    background: transparent;
+    float: right;
+    margin-top: 200px;
+    margin-right: 31%;
+  }
+  #portfolio .next_and_back_slide_show button.right-arrow img {
+    width: 44px;
+    height: 44px;
+  }
+  #portfolio .portfolio-item a img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 340px;
+    height: 220px;
     max-width: 100%;
     margin-top: 120px;
   }
