--- a/scss/aboutme.scss
+++ b/scss/aboutme.scss
@@ -388,5 +388,353 @@
 
 
 @media only screen and (min-width: 1367px) and (max-width: 1440px) {
-    
+    #about-me{
+        overflow-x: hidden;
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 44px;
+            font-family: 'Rokkitt', serif;
+            margin-top: 320px;
+            margin-bottom: 50px;
+            background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+             
+            img{
+                display: none;
+            }
+        }
+        .info_about_me{
+            p{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                margin-left: 10%;
+                margin-right: 10%;
+                font-family: 'Rokkitt', serif;
+                color: rgb(75, 75, 75);
+                font-weight: bold;
+                font-size: 22px;
+                margin-top: 35px;                
+            }
+            .block_element{
+                background-color: #1DA1A9;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto;
+                margin-top: -190px;
+                margin-left: -180px;
+                opacity: 0.8;
+                z-index: -1;
+                position: absolute;
+                transform: rotate(340deg);
+                -ms-transform: rotate(340deg);
+                -moz-transform: rotate(340deg);
+                -webkit-transform: rotate(340deg);
+                -o-transform: rotate(340deg);
+            }
+        }
+        button{
+            border: none;
+            border-radius: 25px;
+            background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+            color: white;
+            display: flex;
+            justify-content: center;
+            flex-direction: column; 
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px;
+            width: 260px;
+            margin-top: 100px;
+            font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
+        }
+        img{
+            display: flex;
+            justify-content: right;
+            align-items: right;
+            float: right;
+            width: 90px;
+            height: auto;
+            margin-top: -90px;
+            transform: rotate(310deg);
+            -ms-transform: rotate(310deg);
+            -moz-transform: rotate(310deg);
+            -webkit-transform: rotate(310deg);
+            -o-transform: rotate(310deg);
+        }
+    }
+}
+@media only screen and (min-width: 1441px) and (max-width: 1679px){
+    #about-me{
+        overflow-x: hidden;
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 44px;
+            font-family: 'Rokkitt', serif;
+            margin-top: 320px;
+            margin-bottom: 50px;
+            background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+             
+            img{
+                display: none;
+            }
+        }
+        .info_about_me{
+            p{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                margin-left: 10%;
+                margin-right: 10%;
+                font-family: 'Rokkitt', serif;
+                color: rgb(75, 75, 75);
+                font-weight: bold;
+                font-size: 22px;
+                margin-top: 35px;                
+            }
+            .block_element{
+                background-color: #1DA1A9;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto;
+                margin-top: -190px;
+                margin-left: -180px;
+                opacity: 0.8;
+                z-index: -1;
+                position: absolute;
+                transform: rotate(340deg);
+                -ms-transform: rotate(340deg);
+                -moz-transform: rotate(340deg);
+                -webkit-transform: rotate(340deg);
+                -o-transform: rotate(340deg);
+            }
+        }
+        button{
+            border: none;
+            border-radius: 25px;
+            background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+            color: white;
+            display: flex;
+            justify-content: center;
+            flex-direction: column; 
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px;
+            width: 260px;
+            margin-top: 100px;
+            font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
+        }
+        img{
+            display: flex;
+            justify-content: right;
+            align-items: right;
+            float: right;
+            width: 90px;
+            height: auto;
+            margin-top: -90px;
+            transform: rotate(310deg);
+            -ms-transform: rotate(310deg);
+            -moz-transform: rotate(310deg);
+            -webkit-transform: rotate(310deg);
+            -o-transform: rotate(310deg);
+        }
+    }
+}
+
+@media only screen and (min-width: 1680px) and (max-width: 1919px){
+    #about-me{
+        overflow-x: hidden;
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 44px;
+            font-family: 'Rokkitt', serif;
+            margin-top: 320px;
+            margin-bottom: 50px;
+            background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+             
+            img{
+                display: none;
+            }
+        }
+        .info_about_me{
+            p{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                margin-left: 10%;
+                margin-right: 10%;
+                font-family: 'Rokkitt', serif;
+                color: rgb(75, 75, 75);
+                font-weight: bold;
+                font-size: 22px;
+                margin-top: 35px;                
+            }
+            .block_element{
+                background-color: #1DA1A9;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto;
+                margin-top: -190px;
+                margin-left: -180px;
+                opacity: 0.8;
+                z-index: -1;
+                position: absolute;
+                transform: rotate(340deg);
+                -ms-transform: rotate(340deg);
+                -moz-transform: rotate(340deg);
+                -webkit-transform: rotate(340deg);
+                -o-transform: rotate(340deg);
+            }
+        }
+        button{
+            border: none;
+            border-radius: 25px;
+            background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+            color: white;
+            display: flex;
+            justify-content: center;
+            flex-direction: column; 
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px;
+            width: 260px;
+            margin-top: 100px;
+            font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
+        }
+        img{
+            display: flex;
+            justify-content: right;
+            align-items: right;
+            float: right;
+            width: 90px;
+            height: auto;
+            margin-top: -90px;
+            transform: rotate(310deg);
+            -ms-transform: rotate(310deg);
+            -moz-transform: rotate(310deg);
+            -webkit-transform: rotate(310deg);
+            -o-transform: rotate(310deg);
+        }
+    }
+}
+
+@media only screen and (min-width: 1920px) and (max-width: 2559px){
+    #about-me{
+        overflow-x: hidden;
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 44px;
+            font-family: 'Rokkitt', serif;
+            margin-top: 320px;
+            margin-bottom: 50px;
+            background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+             
+            img{
+                display: none;
+            }
+        }
+        .info_about_me{
+            p{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                margin-left: 10%;
+                margin-right: 10%;
+                font-family: 'Rokkitt', serif;
+                color: rgb(75, 75, 75);
+                font-weight: bold;
+                font-size: 23px;
+                margin-top: 35px;                
+            }
+            .block_element{
+                background-color: #1DA1A9;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 auto;
+                margin-top: -190px;
+                margin-left: -140px;
+                opacity: 0.8;
+                z-index: -1;
+                position: absolute;
+                transform: rotate(340deg);
+                -ms-transform: rotate(340deg);
+                -moz-transform: rotate(340deg);
+                -webkit-transform: rotate(340deg);
+                -o-transform: rotate(340deg);
+            }
+        }
+        button{
+            border: none;
+            border-radius: 25px;
+            background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+            color: white;
+            display: flex;
+            justify-content: center;
+            flex-direction: column; 
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px;
+            width: 260px;
+            margin-top: 100px;
+            font-size: 18px;
+            
+            a{
+                color: white;
+                text-decoration: none;
+            }
+        }
+        img{
+            display: none;
+        }
+    }
 }
